force/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>New Release Sales Process</fullName>
        <description>Used for New Release Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Work</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal Sales Process</fullName>
        <description>Sales process for renewal opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Work</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>VSP Consignment Sales Process</fullName>
        <description>Used for Consignment Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Work</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>VSP Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Work</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account.Phone</formula>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <label>Account Physical City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <label>Account Physical State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_Street_Address__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <label>Account Physical Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_ZIP_Code__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <label>Account Physical ZIP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Value_Timeframe__c</fullName>
        <description>Timeline for expected Amount.</description>
        <label>Amount Value Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
                <value>
                    <fullName>36 Months</fullName>
                </value>
                <value>
                    <fullName>48 Months</fullName>
                </value>
                <value>
                    <fullName>60 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Lens_Kit_ID__c</fullName>
        <formula>CASE(TEXT(Contact_Lens_Kit__c),
																&apos;FK UNITY BIOSYNC B SPH 8.8&apos;, &apos;00194315004607&apos;
																,&apos;&apos;)</formula>
        <label>Contact Lens Kit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Lens_Kit__c</fullName>
        <inlineHelpText>Full Kit Name</inlineHelpText>
        <label>Contact Lens Kit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_Brand__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FK UNITY BIOSYNC B SPH 8.8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Opportunity a Cross Sell?</description>
        <label>Cross-Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Product_Promotion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Product/Promotion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Description__c</fullName>
        <description>Shortened description to be displayed on embedded visualforce page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DS_Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_Left__c</fullName>
        <formula>End_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division_Brand__c</fullName>
        <description>What Division/Brand is the Opportunity?</description>
        <label>Division/Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>VSPOne</fullName>
                </value>
                <value>
                    <fullName>UNITY</fullName>
                </value>
                <value>
                    <fullName>TechShield</fullName>
                </value>
                <value>
                    <fullName>otto</fullName>
                </value>
                <value>
                    <fullName>IOF</fullName>
                </value>
                <value>
                    <fullName>sunsync</fullName>
                </value>
                <value>
                    <fullName>Ethos</fullName>
                </value>
                <value>
                    <fullName>Network Participation</fullName>
                </value>
                <value>
                    <fullName>Marchon</fullName>
                </value>
                <value>
                    <fullName>Altair</fullName>
                </value>
                <value>
                    <fullName>Global Business Development</fullName>
                </value>
                <value>
                    <fullName>Contact Lenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date the Product/Program ends.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eyefinity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eyefinity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB_Referral__c</fullName>
        <description>Which LOB is referring an Opportunity?</description>
        <inlineHelpText>Which LOB is referring an Opportunity?</inlineHelpText>
        <label>LOB Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Vision Care</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTM_Revenue_Benchmark__c</fullName>
        <label>LTM Revenue Benchmark</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Date__c</fullName>
        <formula>IF(  Created_from_Lead__c , CreatedDate, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Which LOB is the Opportunity for?</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <inlineHelpText>Competition-The Account prefers other brands or companies
Performance-The Account is not happy with company/brand
VSP Rejected-LOB decided not to proceed with this Opportunity
Not Interested-The Account is not interested in this promotion or product</inlineHelpText>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>VSP Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marchon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marchon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_LOB_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Opportunity a new sale for the LOB?</description>
        <label>New LOB Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Jobs__c</fullName>
        <description>Number of jobs the for the Opportunity.</description>
        <label>Number of Jobs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityNameDefault__c</fullName>
        <formula>TEXT(Division_Brand__c)&amp; &quot; - &quot; &amp;  Product_Program__c  &amp; &quot; - &quot; &amp;TEXT(Planned_Closed_Month__c)</formula>
        <label>OpportunityNameDefault</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Closed_Month__c</fullName>
        <description>When is the Opportunity planning on Closing?</description>
        <label>Planned Closed Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premier_Value_Program_Received_Amount__c</fullName>
        <label>Received Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premier_Value_Program__c</fullName>
        <label>Premier Value Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eyefinity EHR</fullName>
                </value>
                <value>
                    <fullName>MMT (My Marketing Team)</fullName>
                </value>
                <value>
                    <fullName>Optovue</fullName>
                </value>
                <value>
                    <fullName>Synemed</fullName>
                </value>
                <value>
                    <fullName>Vision One (Credit Union)</fullName>
                </value>
                <value>
                    <fullName>Solutionreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Program_Name__c</fullName>
        <label>Product/Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25/250 Unity</fullName>
                </value>
                <value>
                    <fullName>25/250 Both</fullName>
                </value>
                <value>
                    <fullName>Both AR Growth</fullName>
                </value>
                <value>
                    <fullName>Both SunSync Growth</fullName>
                </value>
                <value>
                    <fullName>Both PAL Growth</fullName>
                </value>
                <value>
                    <fullName>Both Ethos Growth</fullName>
                </value>
                <value>
                    <fullName>Brand AR Growth</fullName>
                </value>
                <value>
                    <fullName>Brand SunSync Growth</fullName>
                </value>
                <value>
                    <fullName>Brand PAL Growth</fullName>
                </value>
                <value>
                    <fullName>ClearSlide</fullName>
                </value>
                <value>
                    <fullName>Custom Product/Promotion</fullName>
                </value>
                <value>
                    <fullName>Limited Time Offer (LTO)</fullName>
                </value>
                <value>
                    <fullName>PB Voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product/Program</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Count__c</fullName>
        <label>Program Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <description>Status of the Product/Program.</description>
        <label>Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>Used to auto populate a Project on an Opportunity</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shift Series Phase 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <description>Requested Delivery Date of the Optics Contact Lens kits being ordered</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <formula>IF(Up_Sell__c,&quot;Up sell&quot;,&quot;&quot;) + 
IF((Cross_Sell__c || NOT(ISPICKVAL( LOB_Referral__c,&quot;&quot; )) &amp;&amp; Up_Sell__c),&quot;,&quot;,&quot;&quot;) + 
(IF(Cross_Sell__c || NOT(ISPICKVAL( LOB_Referral__c,&quot;&quot; )),&quot;Cross sell&quot;,&quot;&quot;))</formula>
        <label>Sales generated  from</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Opportunity_Account_Name__c</fullName>
        <formula>&quot;Shift Series Phase 1&quot; &amp; &quot;-&quot; &amp; LEFT(Account.Common_Account_Name_Report__c , 43) &amp; &quot;-&quot; &amp;   Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift Opportunity Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Status__c</fullName>
        <description>Shipping status of Contact Lens Kits, to be populated via integration by SAP.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tracking_Info__c</fullName>
        <description>Tracking Info of contact lens kit populated via SAP Integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Up_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Opportunity an up sell?</description>
        <label>Up-Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSP_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VSP Contact Role</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Altair_NR_All_Open_and_Closed_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Reason__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Release_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed Cancelled</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Altair</value>
        </filters>
        <label>Altair - NR -All Open and Closed Won</label>
    </listViews>
    <listViews>
        <fullName>Altair_NR_specifically_for_NR_xxx</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Reason__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Release_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed Cancelled,Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Altair</value>
        </filters>
        <filters>
            <field>Product_Program__c</field>
            <operation>contains</operation>
            <value>AK</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Florida eye clinic</value>
        </filters>
        <label>Altair - NR Open for NR #xxx</label>
    </listViews>
    <listViews>
        <fullName>Altair_New_Release_I_Manage</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Release_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Altair - New Release - I Manage</label>
    </listViews>
    <listViews>
        <fullName>Altair_Prospect</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.VSP_Opportunity</value>
        </filters>
        <filters>
            <field>Division_Brand__c</field>
            <operation>equals</operation>
            <value>Altair</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Cancelled</value>
        </filters>
        <label>Altair - Prospect - I Manage</label>
    </listViews>
    <listViews>
        <fullName>Barb_s_Altair_Action</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.VSP_Opportunity</value>
        </filters>
        <filters>
            <field>Division_Brand__c</field>
            <operation>equals</operation>
            <value>Altair</value>
        </filters>
        <filters>
            <field>Product_Program__c</field>
            <operation>contains</operation>
            <value>action</value>
        </filters>
        <label>Altair - 3+ Location Action plan</label>
        <sharedTo>
            <roleAndSubordinates>Altair_General_Manager</roleAndSubordinates>
            <roleAndSubordinates>Altair_IT_Director</roleAndSubordinates>
            <roleAndSubordinates>Altair_Sales_Director</roleAndSubordinates>
            <roleAndSubordinates>Altair_Sales_Operations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Product_Program_Name__c</columns>
        <columns>Start_Date_New__c</columns>
        <columns>Program_Count__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Cancelled</value>
        </filters>
        <label>My Open Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>Optics_CRM_Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Promos</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Program_Count__c</columns>
        <columns>Product_Program_Name__c</columns>
        <columns>Custom_Product_Promotion__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Cancelled</value>
        </filters>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Optics</value>
        </filters>
        <label>My Open Promos</label>
        <sharedTo>
            <roleAndSubordinates>Optics_CRM_Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Closing_Soon</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Opps Created Last 30 days</label>
        <sharedTo>
            <roleAndSubordinates>Optics_CRM_Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>